--- a/MyDoctor-iOS/Base.lproj/Main.storyboard
+++ b/MyDoctor-iOS/Base.lproj/Main.storyboard
@@ -141,11 +141,12 @@
                                         <rect key="frame" x="20" y="34" width="280" height="33"/>
                                         <color key="tintColor" red="0.13333334028720856" green="0.51764708757400513" blue="0.93725496530532837" alpha="1" colorSpace="deviceRGB"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
-                                        <color key="textColor" red="0.13333334028720856" green="0.51764708757400513" blue="0.93725496530532837" alpha="1" colorSpace="deviceRGB"/>
+                                        <color key="textColor" red="0.0" green="0.94978687490000002" blue="1" alpha="0.85999999999999999" colorSpace="calibratedRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K8C-Ah-Nxr">
                                         <rect key="frame" x="20" y="41" width="17" height="20"/>
+                                        <color key="tintColor" red="0.0" green="0.94978687490000002" blue="1" alpha="0.85999999999999999" colorSpace="calibratedRGB"/>
                                         <state key="normal" image="backArrow"/>
                                         <connections>
                                             <action selector="btnBack:" destination="5IM-RK-7wZ" eventType="touchUpInside" id="HCE-Cl-ZVa"/>
@@ -170,7 +171,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zw4-Ot-sbM">
-                                        <rect key="frame" x="8" y="215" width="304" height="30"/>
+                                        <rect key="frame" x="8" y="215" width="304" height="20"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DSa-P2-XaB">
@@ -182,6 +183,44 @@
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZPz-zI-RtE">
+                                        <rect key="frame" x="172" y="249" width="130" height="45"/>
+                                        <color key="backgroundColor" red="0.21457016670787099" green="0.71346769649250119" blue="0.93014125631313127" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Write a Review">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="EVP-h5-Fpi">
+                                        <rect key="frame" x="19" y="249" width="130" height="45"/>
+                                        <color key="backgroundColor" red="1" green="0.58946970759107808" blue="0.090148437194239817" alpha="0.85999999999999999" colorSpace="calibratedRGB"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <state key="normal" title="Show Reviews">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                    </button>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="46Z-eQ-j0q">
+                                        <rect key="frame" x="19" y="330" width="283" height="161"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" id="Rm4-jA-qui">
+                                                <rect key="frame" x="0.0" y="28" width="283" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Rm4-jA-qui" id="Vt4-pQ-OBU">
+                                                    <rect key="frame" x="0.0" y="0.0" width="283" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <imageView userInteractionEnabled="NO" tag="5" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TkD-cT-A1g">
+                                                            <rect key="frame" x="265" y="18" width="10" height="10"/>
+                                                        </imageView>
+                                                    </subviews>
+                                                </tableViewCellContentView>
+                                            </tableViewCell>
+                                        </prototypes>
+                                        <connections>
+                                            <outlet property="dataSource" destination="5IM-RK-7wZ" id="UL0-8b-XGZ"/>
+                                            <outlet property="delegate" destination="5IM-RK-7wZ" id="qVK-3w-bzh"/>
+                                        </connections>
+                                    </tableView>
                                 </subviews>
                             </view>
                         </subviews>
@@ -189,11 +228,14 @@
                     </view>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
+                        <outlet property="btnShowReviews" destination="EVP-h5-Fpi" id="8fd-aP-7B2"/>
+                        <outlet property="btnWriteReview" destination="ZPz-zI-RtE" id="mX2-uj-ACh"/>
                         <outlet property="doctorName" destination="4eA-km-fP0" id="96z-MT-tqU"/>
                         <outlet property="doctorPhoto" destination="HWy-WA-pRg" id="v8G-WV-ofN"/>
                         <outlet property="lblSpecialities" destination="1Cq-IF-eXG" id="wit-g5-bTE"/>
                         <outlet property="profilePictureBackground" destination="DSa-P2-XaB" id="4f0-nU-7cq"/>
                         <outlet property="ratingsView" destination="zw4-Ot-sbM" id="9BK-Jj-0il"/>
+                        <outlet property="tableView" destination="46Z-eQ-j0q" id="oVw-i5-mZL"/>
                         <outlet property="viewContent" destination="9Pb-WJ-Az3" id="ZEB-2L-cbe"/>
                     </connections>
                 </viewController>
