--- a/MyDoctor-iOS/Base.lproj/LaunchScreen.storyboard
+++ b/MyDoctor-iOS/Base.lproj/LaunchScreen.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -22,6 +23,7 @@
                                 <constraints>
                                     <constraint firstAttribute="width" constant="110" id="TbY-rp-efa"/>
                                     <constraint firstAttribute="height" constant="110" id="r3B-lc-pa9"/>
+                                    <constraint firstAttribute="width" secondItem="npi-6t-sOb" secondAttribute="height" multiplier="1:1" id="snn-hf-BN5"/>
                                 </constraints>
                             </imageView>
                         </subviews>
